# Marketia

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  MIGRATION.md  README.md  app.py  follow_up.py  market_research.py  pinecone-vs-weaviate-vector-database-comparison_2026-04-26.md  project.json  pyproject.toml  requirements.txt  sample-report_python-311-faster-more-informative-and-typed_2026-04-16.md  streamlit_app.py  top-open-source-vector-databases-2026_2026-04-26.md
.github/workflows/: ci.yml  lint.yml
cli/: __init__.py  followup.py  research.py
marketia/: __init__.py  core.py  reports.py  settings.py
marketia/ui/: __init__.py  app.py  styles.py  tabs.py
tasks/: plan.md  todo.md
tests/: test_core.py  test_reports.py  test_settings.py
